--- a/templates/start.html
+++ b/templates/start.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Form-start</title>
-</head>
+</head> 
 <body>
-    <a href='product/baner'><input type='button' value='Baner reklamowy'></a>
-    <a href='product/sticker'><input type='button' value='Naklejka lub magnez'></a>
-    <a href='product/pad'><input type='button' value='Dywan i podkladka'></a>
-    <a href='product/poster'><input type='button' value='Plakat i dyplom'></a>
-    <a href='product/flag'><input type='button' value='Flaga pozioma'></a>
+    <a href='products/baner'><input type='button' value='Baner reklamowy'></a>
+    <a href='products/sticker'><input type='button' value='Naklejka lub magnez'></a>
+    <a href='products/pad'><input type='button' value='Dywan i podkladka'></a>
+    <a href='products/poster'><input type='button' value='Plakat i dyplom'></a>
+    <a href='products/flag'><input type='button' value='Flaga pozioma'></a>
 </body>
 </html>
