--- a/templates/products.html
+++ b/templates/products.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <h2>Bodyfit</h2>
+        <h2>Materiał</h2>
     </header>
     <div id="main">
         <h2>Materials</h2>
