--- a/templates/products.html
+++ b/templates/products.html
@@ -25,7 +25,7 @@
     </div>
     <div id="progressBar">
         <div class="progressed">Produkt</div>
-        <div class="progressed">Materiał</div>
+        <div>Materiał</div>
         <div>Wykończenie</div>
         <div>Rozmiar</div>
         <div>Plik</div>
