--- a/templates/start.html
+++ b/templates/start.html
@@ -20,7 +20,7 @@
         <a href='products/flag'><input type='button' value='Flaga pozioma'></a>
     </div>
     <div id="progressBar">
-        <div class="progressed">Produkt</div>
+        <div>Produkt</div>
         <div>Materiał</div>
         <div>Wykończenie</div>
         <div>Rozmiar</div>
