--- a/templates/materials.html
+++ b/templates/materials.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
-    <title>Form-start</title>
+    <title>Drukarnia- wykończenie</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
     <div id="progressBar">
         <div class="progressed">Produkt</div>
         <div class="progressed">Materiał</div>
-        <div class="progressed">Wykończenie</div>
+        <div>Wykończenie</div>
         <div>Rozmiar</div>
         <div>Plik</div>
         <div>Dane</div>
