--- a/templates/start.html
+++ b/templates/start.html
@@ -13,9 +13,11 @@
     </header>
     <div id="main">
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
-        {% for i in products %}
-        <a href='products/{{i}}'><input type='button' value='{{i}}'></a>
-        {% endfor %}
+        <a href='products/baner'><input type='button' value='Baner reklamowy'></a>
+        <a href='products/sticker'><input type='button' value='Naklejka lub magnez'></a>
+        <a href='products/pad'><input type='button' value='Dywan i podkladka'></a>
+        <a href='products/poster'><input type='button' value='Plakat i dyplom'></a>
+        <a href='products/flag'><input type='button' value='Flaga pozioma'></a>
     </div>
     <div id="progressBar">
         <div class="progressed">Produkt</div>
