--- a/templates/start.html
+++ b/templates/start.html
@@ -13,11 +13,13 @@
     </header>
     <div id="main">
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
-        <a href='products/baner'><input type='button' value='Baner reklamowy'></a>
-        <a href='products/sticker'><input type='button' value='Naklejka lub magnez'></a>
-        <a href='products/pad'><input type='button' value='Dywan i podkladka'></a>
-        <a href='products/poster'><input type='button' value='Plakat i dyplom'></a>
-        <a href='products/flag'><input type='button' value='Flaga pozioma'></a>
+        {% for i in products %}
+        {% if i|length==2 %}
+        <a href='products/{{i[0]}}'><input type='button' value='{{i}}'></a>
+        {% else %}
+        <a href='products/{{i}}'><input type='button' value='{{i}}'s></a>
+        {% endif %}
+        {% endfor %}
     </div>
     <div id="progressBar">
         <div>Produkt</div>
