--- a/templates/start.html
+++ b/templates/start.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drukarnia- wybierz produkt</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/common.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}">
-</head> 
+</head>
+
 <body>
     <header>
         <h2>Bodyfit</h2>
     </header>
     <div id="main">
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
-        {% for i in products %}
-        <a href='products/{{i}}'><input type='button' value='{{i}}'s></a>
-        {% endfor %}
+        <div id="list">
+            {% for i in produkty %}
+            <a href='products/{{i[0]}}'><p><img src="{{i[1]}}" alt="{{i[0]}}"><br><span>{{i[0]}}</span></p></a>
+            {% endfor %}
+        </div>
     </div>
     <div id="progressBar">
         <div>Produkt</div>
@@ -26,4 +30,5 @@
         <div>Dane</div>
     </div>
 </body>
+
 </html>
