--- a/templates/materials.html
+++ b/templates/materials.html
@@ -13,10 +13,12 @@
         <h2>Wykończenie</h2>
     </header>
     <div id="main">
-       <div id="list">
-        {% for i in methods %}
-        <a href='methods/{{i}}'><p><span>{{i}}</span></p></a>
-        {% endfor %}
+        <div id="list">
+            {% for i in methods %}
+            <a href='methods/{{i}}'>
+                <p><span>{{i}}</span></p>
+            </a>
+            {% endfor %}
         </div>
     </div>
     <div id="progressBar">
