--- a/templates/start.html
+++ b/templates/start.html
@@ -17,7 +17,9 @@
         <h3>Wybierz jaki produkt chcesz u nas wydrukować</h3>
         <div id="list">
             {% for i in produkty %}
-            <a href='products/{{i[0]}}'><p><img src="{{i[1]}}" alt="{{i[0]}}"><br><span>{{i[0]}}</span></p></a>
+            <a href='products/{{i[0]}}'>
+                <p><img src="{{i[1]}}" alt="{{i[0]}}"><br><span>{{i[0]}}</span></p>
+            </a>
             {% endfor %}
         </div>
     </div>
