email input repair

--- a/templates/data.html
+++ b/templates/data.html
@@ -27,7 +27,7 @@
             <input type="text" id="postalCode" placeholder="Kod pocztowy" required>
             <input type="text" id="street" placeholder="Ulica i numer" required>
             <h3>Dane kontaktowe</h3>
-            <input type="mail" id="mail" placeholder="Aders e-mail" required>
+            <input type="email" id="mail" placeholder="Aders e-mail" required>
             <input type="tel" id="tel" placeholder="Nr telefonu">
             <h3>Zgody</h3>
             <input type="checkbox" id="regulamin" required>Zapoznałem się z regulaminem i polityką prywatności.
